# muteki-r2-scripts

./: README.md  find_head.py  ioctl_simple_table.py  list_loaded_apps.py  list_memchunk.py  ppdata.py  pyproject.toml  strtab.py  syscall2r2.py  syscall_shim_reader.py  undo_reloc.py
