[tool.poetry]
name = "muteki-r2-scripts"
version = "0.1.0"
description = ""
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
r2pipe = "^1.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
mypy = "^0.910"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
